# pythonAudio

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
examples/: duplicate_audio.py  noise_reduce.py  trim_audio.py
scripts/: generate_beep.py
src/py_audio_tools/: cli.py  processor.py
tests/: test_processor.py
tests/fixtures/: README.txt
